Button#computeSize overhauled, fixed bug 234157: [Button] computeSize does not respect spacing and padding https://bugs.eclipse.org/bugs/show_bug.cgi?id=234157

--- a/bundles/org.eclipse.rap.demo/theme1/theme.css
+++ b/bundles/org.eclipse.rap.demo/theme1/theme.css
@@ -34,7 +34,7 @@ Tooltip {
 
 Button {
   color: #705e42;
-  padding: 12px 6px;
+  padding: 3px 6px 3px 4px;
   font: bold 12px Arial, Helvetica, sans-serif;
 }
 
